--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
   "packageManager": "yarn@3.2.3",
   "engines": {
     "node": ">=18.18.0"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.12.2",
+    "apollo": "^2.34.0"
   }
 }
